# sql-orm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  SECURITY.md  prompt
.github/workflows/: ci.yml
crates/mssql-orm/src/: context.rs  tracking.rs
crates/sql-orm/: Cargo.toml
crates/sql-orm-cli/: Cargo.toml
crates/sql-orm-cli/src/: main.rs
crates/sql-orm-core/: Cargo.toml
crates/sql-orm-core/src/: lib.rs
crates/sql-orm-macros/: Cargo.toml
crates/sql-orm-macros/src/: lib.rs
crates/sql-orm-migrate/: Cargo.toml
crates/sql-orm-migrate/src/: diff.rs  filesystem.rs  lib.rs  operation.rs  snapshot.rs
crates/sql-orm-query/: Cargo.toml
crates/sql-orm-query/src/: aggregate.rs  delete.rs  expr.rs  insert.rs  join.rs  lib.rs  order.rs  pagination.rs  predicate.rs  select.rs  update.rs
crates/sql-orm-sqlserver/: Cargo.toml
crates/sql-orm-sqlserver/src/: compiler.rs  lib.rs  migration.rs  quoting.rs
crates/sql-orm-sqlserver/tests/: compiler_snapshots.rs  migration_snapshots.rs
crates/sql-orm-sqlserver/tests/snapshots/: compiler_snapshots__compiled_aggregate_count.snap  compiler_snapshots__compiled_count.snap  compiler_snapshots__compiled_delete.snap  compiler_snapshots__compiled_exists_with_join.snap  compiler_snapshots__compiled_grouped_aggregate_with_having_join_and_params.snap  compiler_snapshots__compiled_insert.snap  compiler_snapshots__compiled_scalar_aggregates_with_join.snap  compiler_snapshots__compiled_select.snap  compiler_snapshots__compiled_select_with_aliases.snap  compiler_snapshots__compiled_select_with_join.snap  compiler_snapshots__compiled_update.snap  migration_snapshots__advanced_foreign_key_migration_sql.snap  migration_snapshots__audit_column_migration_sql.snap  migration_snapshots__computed_column_migration_sql.snap  migration_snapshots__foreign_key_migration_sql.snap  migration_snapshots__rename_column_migration_sql.snap  migration_snapshots__rename_table_migration_sql.snap  migration_snapshots__soft_delete_column_migration_sql.snap  migration_snapshots__special_names_and_quoted_literals_migration_sql.snap
crates/sql-orm-tiberius/: Cargo.toml
crates/sql-orm-tiberius/src/: config.rs  connection.rs  error.rs  executor.rs  lib.rs  parameter.rs  pool.rs  row.rs  telemetry.rs  transaction.rs
crates/sql-orm-tiberius/tests/: sqlserver_integration.rs
crates/sql-orm/src/: active_record.rs  audit_runtime.rs  context.rs  dbset_query.rs  lib.rs  page_request.rs  predicate_composition.rs  query_alias.rs  query_order.rs  query_predicates.rs  query_projection.rs  raw_sql.rs  soft_delete_runtime.rs  tracking.rs
crates/sql-orm/src/snapshots/: sql_orm__dbset_query__tests__compiled_include_many_with_root_soft_delete_and_parameters.snap  sql_orm__dbset_query__tests__compiled_include_one_with_included_tenant_parameter_order.snap  sql_orm__dbset_query__tests__compiled_include_one_with_soft_delete_and_parameters.snap  sql_orm__dbset_query__tests__compiled_self_join_repeated_aliases_and_parameter_order.snap
crates/sql-orm/tests/: active_record_trybuild.rs  stage10_public_active_record.rs  stage16_audit_migrations.rs  stage16_entity_policies.rs  stage16_soft_delete_runtime.rs  stage17_raw_sql.rs  stage18_from_row_derive.rs  stage18_public_projections.rs  stage20_navigation_runtime.rs  stage21_graph_runtime.rs  stage21_tracking_runtime.rs  stage24_public_aggregations.rs  stage2_mapping.rs  stage5_public_crud.rs  stage6_public_query_builder.rs  stage6_public_query_builder_snapshots.rs  stage9_relationship_metadata.rs  trybuild.rs
crates/sql-orm/tests/snapshots/: stage6_public_query_builder_snapshots__public_query_builder_compiled_alias_select.snap  stage6_public_query_builder_snapshots__public_query_builder_compiled_join_select.snap  stage6_public_query_builder_snapshots__public_query_builder_compiled_select.snap
crates/sql-orm/tests/ui/: active_record_delete_public_valid.rs  active_record_missing_entity_set.rs  active_record_missing_entity_set.stderr  active_record_public_valid.rs  active_record_save_public_valid.rs  audit_fields_duplicate_column.rs  audit_fields_duplicate_column.stderr  audit_fields_empty_column.rs  audit_fields_empty_column.stderr  audit_fields_tuple_struct.rs  audit_fields_tuple_struct.stderr  audit_fields_unsupported_attr.rs  audit_fields_unsupported_attr.stderr  audit_fields_unsupported_type.rs  audit_fields_unsupported_type.stderr  audit_fields_valid.rs  audit_provider_public_valid.rs  audit_values_public_valid.rs  changeset_field_not_option.rs  changeset_field_not_option.stderr  code_first_public_valid.rs  dbcontext_duplicate_entity_set.rs  dbcontext_duplicate_entity_set.stderr  dbcontext_invalid_field_type.rs  dbcontext_invalid_field_type.stderr  dbcontext_valid.rs  dbset_include_projection_unavailable.rs  dbset_include_projection_unavailable.stderr  dbset_query_ast_bypass_unavailable.rs  dbset_query_ast_bypass_unavailable.stderr  entity_audit_attr_valid.rs  entity_audit_column_collision.rs  entity_audit_column_collision.stderr  entity_audit_column_symbol_unavailable.rs  entity_audit_column_symbol_unavailable.stderr  entity_audit_missing_type.rs  entity_audit_missing_type.stderr  entity_audit_public_valid.rs  entity_chrono_time_types_valid.rs  entity_composite_index_valid.rs  (+87 more)
docs/: aggregations.md  api.md  code-first.md  core-concepts.md  entity-policies.md  migrations.md  navigation.md  projections.md  query-builder.md  quickstart.md  raw-sql.md  relationships.md  repository-audit.md  stability-audit.md  tracking-stability.md  tracking-unit-of-work.md  transactions.md  use-without-downloading.md
docs/architecture/: overview.md
examples/: README.md
examples/todo-app/: Cargo.toml  README.md  database_update.sql
examples/todo-app/scripts/: migration_e2e.sh
examples/todo-app/src/: db.rs  domain.rs  http.rs  lib.rs  queries.rs
