[package]
name = "sql-orm-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Procedural macros for entity and context metadata generation."
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/sql-orm-macros"
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
