[package]
name = "sql-orm-migrate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Code-first migration support for sql-orm."
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/sql-orm-migrate"
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sql-orm-core.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
