[package]
name = "todo-app"
version = "0.2.0-rc.1"
edition = "2024"
publish = false

[workspace]

[features]
default = ["pool-bb8"]
pool-bb8 = ["sql-orm/pool-bb8"]

[dependencies]
axum = "0.8"
sql-orm = { path = "../../crates/sql-orm", default-features = false }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
